--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,23 +1,17 @@
+# Frontend Dockerfile using Nginx
 FROM nginx:alpine
 
-# Copy the index.html to nginx html directory
-COPY index.html /usr/share/nginx/html/
+# Remove default nginx configuration
+RUN rm /etc/nginx/conf.d/default.conf
 
-# Create a custom nginx configuration
-RUN echo 'server { \
-    listen 80; \
-    server_name localhost; \
-    \
-    location / { \
-        root /usr/share/nginx/html; \
-        index index.html; \
-        try_files $uri $uri/ /index.html; \
-    } \
-    \
-    # Enable CORS for WebSocket connections \
-    add_header Access-Control-Allow-Origin *; \
-}' > /etc/nginx/conf.d/default.conf
+# Copy custom nginx configuration
+COPY frontend/nginx.conf /etc/nginx/conf.d/
 
+# Copy frontend files to nginx html directory
+COPY frontend /usr/share/nginx/html
+
+# Expose port 80
 EXPOSE 80
 
+# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
